Added edit detail

--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "cors": "^2.7.1",
     "crypto": "0.0.3",
     "csurf": "^1.8.3",
-    "immutable": "3.6.2",
     "debug": "~2.2.0",
     "dust-loader": "^1.0.1",
     "dustjs-linkedin": "^2.7.0",
     "expose-loader": "^0.7.0",
     "express": "~4.12.4",
     "express-dustjs": "^1.0.0",
+    "express-session": "^1.12.1",
     "express-useragent": "^0.1.9",
     "fluxible": "^0.4.10",
     "fluxible-plugin-fetchr": "^0.3.6",
+    "immutable": "3.6.2",
     "intl": "^1.0.0",
     "intl-locales-supported": "^1.0.0",
     "jade": "~1.9.2",
